# next-rust

./: .gitignore  .vercelignore  Cargo.toml  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
api/: crab.rs
api/examples/: beer.rs  cache.rs  create.rs  env.rs  error.rs  params.rs
src/rs/: utils.rs
